@@ -1,0 +1,22 @@
+<?xml version='1.0'?>
+<TestDescriptor>
+  <Name>Test xs:list forward references to a user-defined simpletype</Name>
+  <Author>Edward Kuns</Author>
+  <Comment>Regression test case for bug CASTOR-1580</Comment>
+  <Category>basic capability</Category>
+  <BugFix>
+    <Reporter>frankbechstein@hotmail.com</Reporter>
+    <Date_Report>2006-09-25</Date_Report>
+    <Date_Fix></Date_Fix>
+    <Comment>This bug is not yet fixed</Comment>
+  </BugFix>
+
+  <SourceGeneratorTest>
+    <Schema>castor-1580.xsd</Schema>
+    <Root_Object random="false" dump="true">ForwardReference</Root_Object>
+    <UnitTestCase>
+      <Name>Test Generation</Name>
+      <Input>input.xml</Input>
+    </UnitTestCase>
+  </SourceGeneratorTest>
+</TestDescriptor>
