@@ -1,0 +1,4 @@
+<?xml version='1.0'?>
+<ForwardReference>
+  <reference>list-item-1 list-item-2 list-item-3</reference>
+</ForwardReference>
